2009-07-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStripItemCollection.cs: Use a List<> instead of an ArrayList in
	Find. This should fix the exception we were getting when trying to
	convert the ArrayList to an array of objects (since we were losing the
	type parameter).
	Fixes #519944.

2009-07-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* RadioButton.cs: Setting Checked when none of the sibligs is checked
	should happen *not* in GotFocus, but in the Enter event. This is
	specially important since we should get that Checked behaviour even if
	no handle is created yet - and thus, no actual GotFocus call happens at
	the time.
	Fixes #520764.

2009-07-16  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: Adjust manually the top border for out internal
	ComboBox, since removing the border from it leaves it without any
	margin. This is not noticeable in a default ComboBox, but it is in an
	instance shown on top of ToolStrip.
	Fixes the remaining part of #507462.

2009-07-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TextBoxBase.cs: Expose the margin top width as a property, to keep
	the code clean.
	* ToolStripTextBox.cs: Since we are actually using no border in the
	default TextBox impl, and we are drawing the border ourselves, we need
	to manually set the top margin.
	Fixes part of #507462.

2009-07-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* PrintPreviewDialog.cs: Record when left was pressed, so we can
	simulate Tab+Alt when moving the focus throughout our buttons and
	controls.
	Fixes the remaining bits of #509142.

2009-07-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: When computing the width of each tab page, use the
	page's Font instead of the tab control one.
	Fixes #514368.

2009-07-03  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* MenuAPI.cs: When handling the Keys.Left key, don't close the menu if